<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/expense_title_label"/>

    <EditText
        android:id="@+id/expense_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expense_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/amount"/>

    <EditText
        android:id="@+id/expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_an_amount_for_the_expense"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/expense_details_label"/>

    <Button
        android:id="@+id/expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/category"/>
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>



</LinearLayout>